refactor: 移除BOM